function(add_chelib_test)
  if(ARGC LESS 1)
    message(FATAL_ERROR "link_asio requires at least one argument (target name)")
    return()
  endif()
  # 创建源文件列表
  set(sources)
  foreach(arg IN LISTS ARGV)
    list(APPEND sources "${arg}.cpp")
  endforeach()
  set(target ${ARGV0})
  add_executable(${target} ${sources})
  target_link_libraries(${target} PRIVATE async core nlohmann_json::nlohmann_json)
  # 确保能正确找到 nlohmann_json 头文件
  target_include_directories(${target} PRIVATE ${NLOHMANN_JSON_INCLUDE})
endfunction()

add_chelib_test(thread_pool)
add_chelib_test(noncopyable)
add_chelib_test(mpscqueue)
add_chelib_test(scoped_timer)
add_chelib_test(spin_lock)
add_chelib_test(timer)
