function(add_chaolib_test)
  if(ARGC LESS 1)
    message(FATAL_ERROR "link_asio requires at least one argument (target name)")
    return()
  endif()
  # 创建源文件列表
  set(sources)
  foreach(arg IN LISTS ARGV)
    list(APPEND sources "${arg}.cpp")
  endforeach()
  set(target ${ARGV0})
  add_executable(${target} ${sources})
  target_link_libraries(${target} PRIVATE async core nlohmann_json::nlohmann_json)
  target_include_directories(${target} PRIVATE ${NLOHMANN_JSON_INCLUDE})
endfunction()

add_chaolib_test(thread_pool)
add_chaolib_test(noncopyable)
add_chaolib_test(mpscqueue)
add_chaolib_test(scoped_timer)
add_chaolib_test(spin_lock)
add_chaolib_test(timer)
add_chaolib_test(serializer_test)
